MockUp/index.css
html {
   background-color: #333;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
}

#Logo {
   width: auto;
   height: 200px;
   padding: 27px;
}

p {
   margin: 0;
}

ul {
   padding: 0%;
   margin: 0px;
}

header {
   background-image: url("./Images/redBlackGradient.jpg");
}

#toolbar {
   height: 60px;
}

#toolBarList {
   height: 60px;
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
   background-color: rgba(150, 38, 43, 0.59);
}

.menu-list-item {
   display: flex;
   float: left;
   height: 60px;
   line-height: 60px;
   position: relative;
}

.menu-link {
   height: 60px;
   box-sizing: border-box;
   display: flex;
   color: white;
   cursor: pointer;
   /* vertical-align: middle; */
   text-align: left;
   align-items: center;
   padding: 0px 16px;
   text-decoration: none;
   font-size: 16px;
   font-weight: 400;
   font-style: normal;
   font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
   width: 100%;

}


.menu-text {
   display: block;
   line-height: normal;
   font-size: 16px;
   font-weight: 400;
   font-style: normal;
   font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
}

.menu-list-item>.menu-link:before {
   content: "";
   color: transparent;
   bottom: 0px;
   background-color: transparent;
   cursor: pointer;
   height: 1px;
   width: 100%;
   position: absolute;
   right: 0;
   box-sizing: border-box;
}

.menu-list-item:hover>.menu-link:before {
   content: "";
   color: rgb(132, 117, 79);
   bottom: 0px;
   background-color: rgb(132, 117, 79);
   cursor: pointer;
   height: 1px;
   width: calc(100% - 1.2em);
   position: absolute;
   right: 50%;
   transition: ease-in-out;
   box-sizing: border-box;
   transform: scale(1, 1) translate(50%, 0);
   transition: transform 0.3s ease-in-out, color 0.0s ease-in-out;
}

.ast-arrow-svg {
   display: block;
   height: .6em;
   width: .6em;
   position: relative;
   margin-left: 10px;
   color: white;
   fill: white;
}


/* Change the link color to #111 (black) on hover */


.menu-list-item:hover .menu-link {
   color: rgb(132, 117, 79);
   box-sizing: border-box;
   line-height: 60px;
   text-decoration-color: rgb(132, 117, 79);
   -webkit-box-align: center;

}

.menu-list-item:hover {
   /* border-bottom: solid rgb(132, 117, 79) thin; */
}




/*over all container for 2 boxes at top*/
#topContentContainer {
   display: inline;
}


/*box on left for quickstandings this element is a direct pearent to the ul that holds all the uls*/
#quickStandings {
   float: left;
   margin-left: 2%;
   /* margin-top: 10px; */
   background-color: rgba(255, 255, 255, 0.644);
   padding: 2px 2px 2px 2px;
   border: #111 solid;
   border-radius: 2px;
   display: flex;
   flex-wrap: wrap;
}

/*reffering to the ul that holds all of the uls for the quickStandings box direct pearnt of them*/
#quickStandings table {
   table-layout: auto;
   padding: 0px 10px 0px 0px;
   border-collapse: collapse;
}

/* boarder around each row of the table*/
#quickStandings table tr td,
#quickStandings th {
   border-top: #111 solid thin;
   border-bottom: #111 solid thin;
   border-right: #979494 solid thin;
   border-left: #979494 solid thin;
}

/* quickStandings table data 3px padding left and right and a 2px padding top and bottom */
#quickStandings table td,
#quickStandings th {
   padding: 3px 3px 3px 3px;
   text-align: center;
   font-weight: bold;
   color: #111;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}




#quickStandings table tr:nth-child(even) {
   background-color: #f2f2f2;
}




/* seperator for css*/


/*reffering to the ul that holds all the uls for the upcomingGames box direct pearnt of them*/
#upcomingGames table {
   table-layout: auto;
   padding: 0px 10px 0px 0px;
   border-collapse: collapse;
}

#upcomingGames table tr td,
#upcomingGames th {
   border-top: #111 solid thin;
   border-bottom: #111 solid thin;
   border-right: #979494 solid thin;
   border-left: #979494 solid thin;
   font-size: larger;

}



/* upcomingGames table data 5px padding left and right and a 10px padding top and bottom*/
#upcomingGames table td,
#upcomingGames th {
   padding: 5px 10px 5px 10px;

   text-align: center;
   font-size: larger;
   font-weight: bold;
   color: #111;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

#upcomingGames table tr:nth-child(even) {
   background-color: #f2f2f2;
}

/*the upcomingGames box*/
#upcomingGames {
   background-color: rgba(255, 255, 255, 0.644);
   padding: 2px 2px 2px 2px;
   float: right;
   /* margin-top: 10px; */
   /* width: 1000px; */
   border: #111 solid;
   border-radius: 2px;
   text-align: center;
   margin: auto;
   /* position: relative; */
   /* left: 50%; */
}


/* seperator for css*/



/*wrapper element for the upcomingGames box for position purposes*/
#wrapperUpcomingGames {
   /* background-color: aqua; */
   display: flex;
   margin-top: 10px;
   flex-wrap: wrap;
}



/* seperator for css*/

/*wrapper element for the youtube box for position purposes and align center under the upcomingGames*/
#wrapperYoutube {
   /* background-color: aqua; */
   display: flex;
   margin-top: 10px;
   margin-left: 10px;
   flex-wrap: wrap;
   position: relative;



}

#youTube {
   /* background-color: aqua; */
   border: #ff0000 solid thick;
   border-radius: 5px;
   display: flex;
   margin-top: 10px;
   flex-wrap: wrap;
   margin: auto;
   aspect-ratio: 16/9;
   position: relative;
   left: auto;

}



/* seperator for css*/
/*wrapper element for slideshow for position purposes and align center under the youtube*/
#wrapperSlideshow {
   /* background-color: aqua; */
   display: flex;
   margin-top: 10px;
   flex-wrap: wrap;
   position: relative;
}

#slideShow {
   /* background-color: aqua; */
   display: flex;
   margin-top: 10px;
   flex-wrap: wrap;
   position: relative;
   float: right;
   margin: auto;
   background-color: white;
}

* {
   box-sizing: border-box
}

/* Slideshow container */
.slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
}

/* Hide the images by default */
.mySlides {
   display: none;
   float: right;
}

/* Next & previous buttons */
.prev,
.next {
   cursor: pointer;
   position: absolute;
   top: 50%;
   width: auto;
   margin-top: -22px;
   padding: 16px;
   color: black;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
}

/* Position the "next button" to the right */
.next {
   right: 0;
   border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover,
.next:hover {
   background-color: rgba(44, 44, 44, 0.8);
}

/* Caption text */
.text {
   color: #f2f2f2;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
   width: 100%;
   text-align: center;
}





.active,
.dot:hover {
   background-color: #717171;
}

/* Fading animation */
.fade {
   animation-name: fade;
   animation-duration: 1.5s;
}

@keyframes fade {
   from {
      opacity: .4
   }

   to {
      opacity: 1
   }
}

